Revert "Ft feedback implementation #165967678 (#72)"
This reverts commit 1dea6050d079f3a68e4fa26af791dc0cb31b5c23.
